--- a/blocks/banner/banner.css
+++ b/blocks/banner/banner.css
@@ -21,7 +21,7 @@
 .banner a.button span.icon {
   display: inline-flex;
   align-items: center;
-  margin-left: 8px;
+  margin-left: var(--spacing-xxs);
 }
 
 .banner {
