--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -47,7 +47,7 @@
 .form-group {
   border-radius: 8px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  padding: 12px 16px 16px;
+  padding: var(--spacing-xs) 16px 16px;
   margin-bottom: 20px;
   position: relative;
 }
