--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -6,7 +6,7 @@
 
 .hero {
   position: relative;
-  padding: 40px 24px;
+  padding: 40px var(--spacing-s);
   min-height: 400px;
   background-color: #000;
   overflow: hidden;
@@ -80,7 +80,7 @@
   margin-bottom: 40px;
   align-items: center;
   width: 90%;
-  gap: 24px;
+  gap: var(--spacing-s);
   margin-left: auto;
   margin-right: auto;
 }
@@ -117,7 +117,7 @@
 .hero .button {
   display: block;
   width: 100%;
-  padding: 12px 16px;
+  padding: var(--spacing-xs) 16px;
   font-size: var(--body-font-size-xs);
   font-weight: 500;
   text-decoration: none;
@@ -133,7 +133,7 @@
   background-color: var(--red-color);
   color: #fff;
   border: 1px solid var(--red-color);
-  padding: 12px 16px;
+  padding: var(--spacing-xs) 16px;
   margin: 0;
   font-weight: 700;
 }
@@ -200,7 +200,7 @@
 /* Tablet: 600px and up */
 @media (width >= 600px) {
   .hero {
-    padding: 60px 24px;
+    padding: var(--spacing-xl) var(--spacing-s);
     display: block;
   }
 
@@ -243,7 +243,7 @@
 
   .hero .button-groups-wrapper {
     flex-direction: column;
-    gap: 24px;
+    gap: var(--spacing-s);
     align-items: flex-start;
     width: auto;
     margin-left: 0;
@@ -253,7 +253,7 @@
   .hero .button-group {
     width: 67%;
     text-align: left;
-    margin-bottom: 24px;
+    margin-bottom: var(--spacing-s);
     flex: 0 0 auto;
   }
 
@@ -294,7 +294,7 @@
 /* Desktop: 900px and up */
 @media (width >= 900px) {
   .hero {
-    padding: 10px 60px 80px;
+    padding: 10px var(--spacing-xl) 80px;
     min-height: 500px; /* Prevent CLS from hero content resizing */
   }
 
