--- a/blocks/sticky-cta/sticky-cta.css
+++ b/blocks/sticky-cta/sticky-cta.css
@@ -30,7 +30,7 @@
   align-items: center;
   justify-content: center;
   padding: 30px 20px 20px;
-  gap: 12px;
+  gap: var(--spacing-xs);
   text-align: center;
 }
 
@@ -106,7 +106,7 @@
   }
 
   .sticky-cta-content {
-    padding-top: 8px;
+    padding-top: var(--spacing-xxs);
   }
 
   .sticky-cta-link,
@@ -123,19 +123,19 @@
 /* Desktop Styles */
 @media (width >= 901px) {
   .sticky-cta.block {
-    padding: 25px 40px;
+    padding: var(--spacing-s) 40px;
     gap: 20px;
     height: 120px;
   }
 
   .sticky-cta-content {
-    padding-top: 24px;
+    padding-top: var(--spacing-s);
   }
 
   .sticky-cta-link,
   .sticky-cta-content a.button {
     font-size: var(--body-font-size-s);
-    padding: 16px 28px;
+    padding: 16px 2var(--spacing-xxs);
   }
 
   .sticky-cta-subtitle-content {
