--- a/blocks/category-nav/category-nav.css
+++ b/blocks/category-nav/category-nav.css
@@ -77,7 +77,7 @@ body.is-framework-page .category-nav.block > div > div {
 /* Navigation list */
 .category-nav-left {
   display: flex;
-  gap: 4var(--spacing-xxs);
+  gap: 48px;
   list-style: none;
   margin: 0;
   padding: 0;
