--- a/blocks/header/nav-pane.css
+++ b/blocks/header/nav-pane.css
@@ -376,7 +376,7 @@ margin: 3px 5px
 .gradientCard a {
 padding: 7px 10px;
 min-height: 60px;
-font-size: var(--spacing-xs)
+font-size: 12px;
 }
 
 .top-nav .top-nav-left .dropdown-content.menu-cardList-cnt {
