--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -124,7 +124,7 @@ body.modal-open {
   padding: 0;
   border: none;
   border-radius: 16px;
-  box-shadow: 0 var(--spacing-xxs) 32px rgb(0 0 0 / 25%);
+  box-shadow: 0 8px 32px rgb(0 0 0 / 25%);
   z-index: 10; /* Above page-background and decorations */
 }
 
